added @media to css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,5 +206,15 @@ input[type=text], select, textarea {
     clear: both;
 }
 
+@media screen and (max-width: 980px) {
 
 
+}
+ 
+@media screen and (max-width: 768px){
+
+}
+
+@media screen and (max-width: 640px){
+    
+}
