--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ input[type=text], select, textarea {
 
 .column {
     float: left;
-    width: 33.3%;
+    width: 50%;
     margin-right: 50px;
     padding-bottom: 30px;
 }
@@ -219,7 +219,7 @@ input[type=text], select, textarea {
 @media screen and (max-width: 768px){
  
     .wrapper {
-     width: 740px;
+     width: 750px;
     }
     #links{
         margin-left: 50px;
@@ -228,7 +228,7 @@ input[type=text], select, textarea {
     }
 
     form{
-        width: 750px;
+        width: 600px;
     }
     
     .box{
@@ -237,14 +237,16 @@ input[type=text], select, textarea {
     }
 
     .column {
-        padding-right: 50px;
-        width: 50%;
+        padding-right: 20px;
+        padding-left: 20px;
+        width: 33.3%;
     }
 }
 
 @media screen and (max-width: 640px){
     .wrapper {
-     width: 600px;
+     width: 500px;
+     padding-right: 150px;
      
     }
  
@@ -267,12 +269,14 @@ input[type=text], select, textarea {
     }
     
     form{
-        width: 500px;
+        width: 400px;
+        margin-right: 50px;
+        margin-bottom: 50px;
     }
 
     .box{
         width: 400px;
-        margin-right: 130px;
+        margin-right: 50px;
     }
 
     .column{
