--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,9 +237,24 @@ input[type=text], select, textarea {
     }
 
     .column {
-        padding-right: 20px;
-        padding-left: 20px;
-        width: 50%;
+        padding-right: 10px;
+        padding-left: 0px;
+        width: 35%;
+    }
+
+    .port{
+        width: 250px;
+        height: 150px;
+        margin-bottom: 20px;
+
+    }
+
+    .item h2 span{
+        width: 230px;
+        height: 20px;
+        padding:10px;
+        top: 100px;
+        font-size: 20px;
     }
 }
 
@@ -280,8 +295,23 @@ input[type=text], select, textarea {
     }
 
     .column{
+        float: none;
         padding-bottom: 0px;
-        margin-top: 0px;
     }
 
+    .port{
+        width: 250px;
+        height: 150px;
+        margin-bottom: 0px;
+
+    }
+
+    .item h2 span{
+        width: 230px;
+        height: 20px;
+        padding:10px;
+        top: 100px;
+        font-size: 20px;
+    }
+   
 }
